Changelog
=========

1.0.5 - Unreleased
------------------

1.0.4 - 2010-11-15
------------------

- Restore more of the table.listing (Fancy listing) CSS. Refs #10331.
  [rossp]

1.0.3 - 2010-09-09
------------------

- Removed padding from navigation portlet header when it is hidden, so we won't
  see a small chunk of it. This fixes http://dev.plone.org/plone/ticket/10800.
  [cwainwright]

- Worked on fixing up styles for IE8:

  * put previous logo settings back (float messes with rtl)
  * put in IE spacing fixes (logo, hiddenStructure)
  * removed float from div.cell, so livesearch and display menu don't fall
    behind other items in IE8.

  Closes http://dev.plone.org/plone/ticket/10872.
  [cwainwright]

- Removed "line-height: 2em;" from "table.listing a" css rule so the vertical
  alignment of linked text and non linked text is the same.
  [vincentfretin]

- Moved icons in drop down "Add new..." menu to right of text for RTL
  scripts. This fixes http://dev.plone.org/plone/ticket/10954.
  [emanlove]

- Moved language selector to the left for RTL scripts. Also reversed margin
  of the actionMenu for RTL scripts. This fixes
  http://dev.plone.org/plone/ticket/10955.
  [emanlove]

- Fixed state position in the state/transitions menu when it is no clickable.
  [vincentfretin]

- Worked on fixing up styles for IE7:

  * removed padding on breadcrumb links, so all breadcrumb text
    displays on one level
  * put in hack to make links with content icons 'display: block' in IE.
    This fixes the Add New dropdown display, but breaks icon display on
    .navTreeCurrentItem, so I added zoom to the links.
    (fyi - the hack was the only way I could find to make this work to
    override the inline-block, did not work in IEFixes.css)
  * adjusted styles on logo so IE displays it in the correct place

  Refs http://dev.plone.org/plone/ticket/10872.
  [cwainwright]

1.0.2 - 2010-07-18
------------------
